--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1= My Data
-  p Welcome to #{My Data}
+  h1= title
+  p Welcome to #{title}
 
   p An interesting fact about myself is that I learned how to ride a two wheeler when I was 3, but crashed into a mailbox giving me the scar I have on my chin.
 
